--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <title>DJ Turntable :: Musical and Entertainment Services</title>
@@ -9,42 +9,26 @@
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <link rel="icon" href="DJ_Turntable_LOGO_2.png">
     </head>
-    <body class="home-container">
-      <nav id="flex-nav">
-        <a href="#" class="toggle-nav">☰ Menu</a>
-        <ul id="nav-container">
-          <li class="nav-logo"><a href="index.html" id="nav-logo"><img src="DJ_Turntable_LOGO_3.png" id="logo"></a></li>
-          <li class="nav1"><a class="menu-item" href="about.html">About</a></li>
-          <li class="nav2"><a class="menu-item" href="packages.html">Packages</a></li>
-          <li class="nav3"><a class="menu-item" href="events.html">Events</a>
-            <div class="sub-menu1">
-              <ul>
-                <li><a href="weddings.html">Weddings</a></li>
-                <li><a href="school.html">School Celebrations</a></li>
-                <li><a href="corporate.html">Corporate Events</a></li>
-                <li><a href="occasions.html">Special Occasions</a></li>
-              </ul>
-            </div>
-          </li>
-          <li class="nav4"><a class="menu-item" href="reviews.html">Reviews</a></li>
-          <li class="nav5"><a class="menu-item" href="gallery.html">Gallery</a></li>
-          <li class="nav6"><a class="menu-item" href="resources.html">Resources</a></li>
-          <li class="nav7"><a class="menu-item" href="contact.html">Contact</a></li>
-        </ul>
-      </nav>
-      <header class="header-container">
-        <div><h1>We make music the heartbeat</h1>
-        <h1>of your celebration!</h1>
-        <img src="twitter-icon.png">
-        <img id="facebook" src="facebook-icon.png">
+    <body>
+       <nav>
+        <a href="#" class="logo">LOGO</a>
+        <input type="checkbox" id="menu-bar">
+        <label for="menu-bar">Menu</label>
+        <div class="navbar">
+            <ul>
+                <li><a href="#">home</a></li>
+                <li><a href="#">about</a></li>
+                <li><a href="#">pages +</a>
+                    <ul>
+                        <li><a href="#">blogs</a></li>
+                        <li><a href="#">services</a></li>
+                    </ul>
+                </li>    
+                <li><a href="#">review</a></li>
+                <li><a href="#">gallery</a></li>
+                <li><a href="#">contact</a></li>
+            </ul>
         </div>
-      </header>
-      <main>
-      </main>
-      <footer>
-        <p>©2023. DJ Turntable, Inc. All Rights Reserved</p>
-        <p>1 Quiet Valley Lane, Sepulveda CA 91343</p>
-        <p>818-714-5902</p>
-      </footer>
+       </nav>
     </body>
 </html>
