--- a/index.html
+++ b/index.html
@@ -10,25 +10,86 @@
         <link rel="icon" href="DJ_Turntable_LOGO_2.png">
     </head>
     <body>
-       <nav>
-        <a href="#" class="logo">LOGO</a>
-        <input type="checkbox" id="menu-bar">
-        <label for="menu-bar">Menu</label>
-        <div class="navbar">
-            <ul>
-                <li><a href="#">home</a></li>
-                <li><a href="#">about</a></li>
-                <li><a href="#">pages +</a>
+        <div class="container1">
+            <!-- <a href="#"><img class="logo" src="DJ_Turntable_LOGO_3.png"></a> -->
+            <!-- <a href="#"><img class="small-logo" src="DJ_Turntable_LOGO_1.png"></a> -->
+            <nav>
+                <a href="#"><img class="small-logo" src="DJ_Turntable_LOGO_1.png"></a>
+                <a href="#"><img class="logo" src="DJ_Turntable_LOGO_3.png"></a>
+                <br>
+                <a href="#" class="placeholder">LOGO</a>
+                <input type="checkbox" id="menu-bar">
+                <label for="menu-bar">Menu</label>
+                <div class="navbar">
                     <ul>
-                        <li><a href="#">blogs</a></li>
-                        <li><a href="#">services</a></li>
+                        <li><a href="#">about <span class="plus">+</span></a>
+                            <ul>
+                                <li><a href="#">My Story</a></li>
+                            </ul>
+                        </li>
+                        
+                        <li><a href="#">packages</a></li>
+                        <li><a href="#">events <span class="plus">+</span></a>
+                            <ul>
+                                <li><a href="#">weddings</a></li>
+                                <li><a href="#">school celebrations</a></li>
+                                <li><a href="#">corporate events</a></li>
+                                <li><a href="#">special occasions</a></li>
+                            </ul>
+                        </li>    
+                        <li><a href="#">reviews</a></li>
+                        <li><a href="#">gallery</a></li>
+                        <li><a href="#">resources</a></li>
+                        <li><a href="#">contact</a></li>
                     </ul>
-                </li>    
-                <li><a href="#">review</a></li>
-                <li><a href="#">gallery</a></li>
-                <li><a href="#">contact</a></li>
-            </ul>
+            </div>
+            </nav>
+            <div class="spacer-area">
+                <span>placeholder</span>
+            </div>
+            <header class="header-container">
+                <div>
+                <h1>We make music the heartbeat of your celebration!</h1>
+                <img src="twitter-icon.png">
+                <img id="facebook" src="facebook-icon.png">
+                </div>
+            </header>
+            <figure class="figuregrid">
+                <div><video id="homevid"  poster="poster.jpg" controls>
+                    <source src="DJTurntable.mp4" type="video/mp4">
+                  Your browser does not support the video tag.
+                </video>
+                <br>
+                <audio id="homesong" controls>
+                    <source src="DJTurntableAudio2.mp3" type="audio/ogg">
+                    Your browser does not support the audio tag.
+                </audio> 
+                </div>
+            </figure>
+            <main class="nestedgrid1">
+                <div class="intro">
+                    <p>DJ Turntable is a full-service disc jockey and entertainment company that delivers fantastic music, great sound, and amazing lighting with spot-on professionalism. Whether you're planning a wedding, school celebration, corporate event, or private party, DJ Turntable will make music the heartbeat of your celebration. We use state-of-the-art equipment to pump out the songs that you want to hear. With a digital music library of over 50,000 songs, you'll undoubtedly be able to create the playlist you've been dreaming of. Our years of experience guarantee that you get stress-free event planning and happy, dancing guests.</p>
+                </div>
+                
+                <div class="DJ">
+                    <h3>Meet The DJ</h3>
+                    <p>Dylan jackson has a passion for music and loves sharing it with great people. Read his story and get to know DJ Turntable...</p>
+                </div>
+                <div class="services">
+                    <h3>Event Services</h3>
+                    <p>DJ Turntable has loads of experience playing for all types of audiances at all kinds of celebrations. See how much fun you can have...</p>
+                </div>
+                <div class="reviews">
+                    <h3>Rave Reviews</h3>
+                    <p><b>We're not bragging, but our clients are! Here's the beat on the street...</b>"Our students were thrilled, and even the teachers enjoyed the evening!"</p>
+
+                </div>
+            </main>
+            <footer>
+                <p>©2023. DJ Turntable, Inc. All Rights Reserved</p>
+                <p>1 Quiet Valley Lane, Sepulveda CA 91343</p>
+                <p>818-714-5902</p>
+            </footer>
         </div>
-       </nav>
     </body>
 </html>
