--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <!-- <a href="#"><img class="logo" src="DJ_Turntable_LOGO_3.png"></a> -->
             <!-- <a href="#"><img class="small-logo" src="DJ_Turntable_LOGO_1.png"></a> -->
             <nav>
-                <a href="#"><img class="small-logo" src="DJ_Turntable_LOGO_1.png"></a>
-                <a href="#"><img class="logo" src="DJ_Turntable_LOGO_3.png"></a>
+                <a href="index.html"><img class="small-logo" src="DJ_Turntable_LOGO_1.png"></a>
+                <a href="index.html"><img class="logo" src="DJ_Turntable_LOGO_3.png"></a>
                 <br>
                 <a href="#" class="placeholder">LO</a>
                 <!-- <input type="checkbox" id="menu-bar">
@@ -27,14 +27,14 @@
                   
                 <div class="navbar">
                     <ul>
-                        <li><a href="#">about <span class="plus">+</span></a>
+                        <li><a href="about.html" id="about" onclick="aboutClick()">about <span class="plus">+</span></a>
                             <ul class = "dropdown-menu1">
                                 <li class="dropdown-item1"><a href="#">My Story</a></li>
                             </ul>
                         </li>
                         
                         <li><a href="#">packages</a></li>
-                        <li><a href="#">events <span class="plus">+</span></a>
+                        <li><a href="events.html" id="events" onclick="eventClick()">events <span class="plus">+</span></a>
                             <ul class = "dropdown-menu2">
                                 <li class = "dropdown-item1"><a href="#">weddings</a></li>
                                 <li class = "dropdown-item2"><a href="#">school celebrations</a></li>
