--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <!-- <a href="#"><img class="logo" src="DJ_Turntable_LOGO_3.png"></a> -->
             <!-- <a href="#"><img class="small-logo" src="DJ_Turntable_LOGO_1.png"></a> -->
             <nav>
-                <a href="index.html"><img class="small-logo" src="DJ_Turntable_LOGO_1.png"></a>
-                <a href="index.html"><img class="logo" src="DJ_Turntable_LOGO_3.png"></a>
+                <a href="index.html"><img class="small-logo" src="DJ_Turntable_LOGO_1.png" alt="DJ Turntable Logo"></a>
+                <a href="index.html"><img class="logo" src="DJ_Turntable_LOGO_3.png" alt="DJ Turntable Logo"></a>
                 <br>
                 <a href="#" class="placeholder">LO</a>
                 <!-- <input type="checkbox" id="menu-bar">
@@ -29,23 +29,23 @@
                     <ul>
                         <li><a href="about.html" id="about" onclick="aboutClick()">about <span class="plus">+</span></a>
                             <ul class = "dropdown-menu1">
-                                <li class="dropdown-item1"><a href="#">My Story</a></li>
+                                <li class="dropdown-item1"><a href="story.html">My Story</a></li>
                             </ul>
                         </li>
                         
                         <li><a href="#">packages</a></li>
                         <li><a href="events.html" id="events" onclick="eventClick()">events <span class="plus">+</span></a>
                             <ul class = "dropdown-menu2">
-                                <li class = "dropdown-item1"><a href="#">weddings</a></li>
-                                <li class = "dropdown-item2"><a href="#">school celebrations</a></li>
-                                <li class = "dropdown-item3"><a href="#">corporate events</a></li>
-                                <li class = "dropdown-item4"><a href="#">special occasions</a></li>
+                                <li class = "dropdown-item1"><a href="weddings.html">weddings</a></li>
+                                <li class = "dropdown-item2"><a href="celebrations.html">school celebrations</a></li>
+                                <li class = "dropdown-item3"><a href="corporare.html">corporate events</a></li>
+                                <li class = "dropdown-item4"><a href="occasions.html">special occasions</a></li>
                             </ul>
                         </li>    
-                        <li><a href="#">reviews</a></li>
-                        <li><a href="#">gallery</a></li>
-                        <li><a href="#">resources</a></li>
-                        <li><a href="#">contact</a></li>
+                        <li><a href="reviews.html">reviews</a></li>
+                        <li><a href="gallery.html">gallery</a></li>
+                        <li><a href="resources.html">resources</a></li>
+                        <li><a href="contact.html">contact</a></li>
                     </ul>
             </div>
             <script src="main.js"></script>
@@ -56,8 +56,8 @@
             <header class="header-container">
                 <div>
                 <h1>We make music the heartbeat of your celebration!</h1>
-                <img src="twitter-icon.png">
-                <img id="facebook" src="facebook-icon.png">
+                <img src="twitter-icon.png" alt="Twitter Logo">
+                <img id="facebook" src="facebook-icon.png" alt="facebook logo">
                 </div>
             </header>
             <figure class="figuregrid">
