--- a/events.html
+++ b/events.html
@@ -29,23 +29,23 @@
                     <ul>
                         <li><a href="about.html" id="about" onclick="aboutClick()">about <span class="plus">+</span></a>
                             <ul class = "dropdown-menu1">
-                                <li class="dropdown-item1"><a href="#">My Story</a></li>
+                                <li class="dropdown-item1"><a href="story.html">My Story</a></li>
                             </ul>
                         </li>
                         
                         <li><a href="#">packages</a></li>
-                        <li><a href="events.html" id="events" class="active" onclick="eventClick()">events <span class="plus">+</span></a>
+                        <li><a href="events.html" id="events" onclick="eventClick()" class="active">events <span class="plus">+</span></a>
                             <ul class = "dropdown-menu2">
-                                <li class = "dropdown-item1"><a href="#">weddings</a></li>
-                                <li class = "dropdown-item2"><a href="#">school celebrations</a></li>
-                                <li class = "dropdown-item3"><a href="#">corporate events</a></li>
-                                <li class = "dropdown-item4"><a href="#">special occasions</a></li>
+                                <li class = "dropdown-item1"><a href="weddings.html">weddings</a></li>
+                                <li class = "dropdown-item2"><a href="celebrations.html">school celebrations</a></li>
+                                <li class = "dropdown-item3"><a href="corporare.html">corporate events</a></li>
+                                <li class = "dropdown-item4"><a href="occasions.html">special occasions</a></li>
                             </ul>
                         </li>    
-                        <li><a href="#">reviews</a></li>
-                        <li><a href="#">gallery</a></li>
-                        <li><a href="#">resources</a></li>
-                        <li><a href="#">contact</a></li>
+                        <li><a href="reviews.html">reviews</a></li>
+                        <li><a href="gallery.html">gallery</a></li>
+                        <li><a href="resources.html">resources</a></li>
+                        <li><a href="contact.html">contact</a></li>
                     </ul>
             </div>
             <script src="main.js"></script>
