--- a/gallery.html
+++ b/gallery.html
@@ -58,7 +58,7 @@
                 <img src="twitter-icon.png" alt="Twitter Logo">
                 <img id="facebook" src="facebook-icon.png" alt="facebook logo">
             </header>
-            <section>
+            <section class="sectionG">
                 <h2>Take a look at some of the many celebrations that DJ Turntable has entertained with the magic of music and lighting.</h2>
             </section>
             <main class="swiper-container">
