--- a/common.html
+++ b/common.html
@@ -27,13 +27,13 @@
                   
                 <div class="navbar">
                     <ul>
-                        <li><a href="about.html" id="about" onclick="aboutClick()" class="active">about <span class="plus">+</span></a>
+                        <li><a href="about.html" id="about" onclick="aboutClick()">about <span class="plus">+</span></a>
                             <ul class = "dropdown-menu1">
                                 <li class="dropdown-item1"><a href="story.html">My Story</a></li>
                             </ul>
                         </li>
                         
-                        <li><a href="packages.html">packages</a></li>
+                        <li><a href="#">packages</a></li>
                         <li><a href="events.html" id="events" onclick="eventClick()">events <span class="plus">+</span></a>
                             <ul class = "dropdown-menu2">
                                 <li class = "dropdown-item1"><a href="weddings.html">weddings</a></li>
