--- a/gallery.html
+++ b/gallery.html
@@ -33,7 +33,7 @@
                             </ul>
                         </li>
                         
-                        <li><a href="#">packages</a></li>
+                        <li><a href="packages.html">packages</a></li>
                         <li><a href="events.html" id="events" onclick="eventClick()">events <span class="plus">+</span></a>
                             <ul class = "dropdown-menu2">
                                 <li class = "dropdown-item1"><a href="weddings.html">weddings</a></li>
@@ -94,7 +94,7 @@
                     <div class="swiper-slide" style="background-image:url(gallery4.jpg)">
                       <img src="gallery4.jpg" class="entity-img" alt="birthday party hosted by DJ Turntable">
                       <div class="content">
-                        <p class="title" data-swiper-parallax="-30%" data-swiper-parallax-scale=".7">Birthday Parties</p>
+                        <p class="title" data-swiper-parallax="-30%" data-swiper-parallax-scale=".7">School Celebrations</p>
                         
                       </div>
                     </div>
