--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                             </ul>
                         </li>
                         
-                        <li><a href="#">packages</a></li>
+                        <li><a href="packages.html">packages</a></li>
                         <li><a href="events.html" id="events" onclick="eventClick()">events <span class="plus">+</span></a>
                             <ul class = "dropdown-menu2">
                                 <li class = "dropdown-item1"><a href="weddings.html">weddings</a></li>
