--- a/common.html
+++ b/common.html
@@ -33,12 +33,12 @@
                             </ul>
                         </li>
                         
-                        <li><a href="#">packages</a></li>
+                        <li><a href="packages.html">packages</a></li>
                         <li><a href="events.html" id="events" onclick="eventClick()">events <span class="plus">+</span></a>
                             <ul class = "dropdown-menu2">
                                 <li class = "dropdown-item1"><a href="weddings.html">weddings</a></li>
                                 <li class = "dropdown-item2"><a href="celebrations.html">school celebrations</a></li>
-                                <li class = "dropdown-item3"><a href="corporare.html">corporate events</a></li>
+                                <li class = "dropdown-item3"><a href="corporate.html">corporate events</a></li>
                                 <li class = "dropdown-item4"><a href="occasions.html">special occasions</a></li>
                             </ul>
                         </li>    
