--- a/gallery.html
+++ b/gallery.html
@@ -38,7 +38,7 @@
                             <ul class = "dropdown-menu2">
                                 <li class = "dropdown-item1"><a href="weddings.html">weddings</a></li>
                                 <li class = "dropdown-item2"><a href="celebrations.html">school celebrations</a></li>
-                                <li class = "dropdown-item3"><a href="corporare.html">corporate events</a></li>
+                                <li class = "dropdown-item3"><a href="corporate.html">corporate events</a></li>
                                 <li class = "dropdown-item4"><a href="occasions.html">special occasions</a></li>
                             </ul>
                         </li>    
