--- a/weddings.html
+++ b/weddings.html
@@ -11,12 +11,12 @@
     </head>
     <body>
         
-        <div class="container1">
+        <div class="container2">
             <!-- <a href="#"><img class="logo" src="DJ_Turntable_LOGO_3.png"></a> -->
             <!-- <a href="#"><img class="small-logo" src="DJ_Turntable_LOGO_1.png"></a> -->
             <nav>
-                <a href="index.html"><img class="small-logo" src="DJ_Turntable_LOGO_1.png" alt="DJ Turntable Logo"></a>
-                <a href="index.html"><img class="logo" src="DJ_Turntable_LOGO_3.png" alt="DJ Turntable Logo"></a>
+                <a href="index.html"><img class="small-logo" src="DJ_Turntable_LOGO_1.png"></a>
+                <a href="index.html"><img class="logo" src="DJ_Turntable_LOGO_3.png"></a>
                 <br>
                 <a href="#" class="placeholder">LO</a>
                 <!-- <input type="checkbox" id="menu-bar">
@@ -53,44 +53,23 @@
             <div class="spacer-area">
                 <span>placeholder</span>
             </div>
-            <header class="header-container">
-                <div>
-                <h1>We make music the heartbeat of your celebration!</h1>
+            <header>
+                <h1>Weddings</h1>
                 <img src="twitter-icon.png" alt="Twitter Logo">
                 <img id="facebook" src="facebook-icon.png" alt="facebook logo">
-                </div>
             </header>
-            <figure class="figuregrid">
-                <div><video id="homevid"  poster="poster.jpg" controls>
-                    <source src="DJTurntable.mp4" type="video/mp4">
-                  Your browser does not support the video tag.
-                </video>
-                <br>
-                <audio id="homesong" controls>
-                    <source src="DJTurntableAudio2.mp3" type="audio/ogg">
-                    Your browser does not support the audio tag.
-                </audio> 
-                </div>
+            <figure>
+                <figcaption>It's always a blast!</figcaption><br>
+                <img src="wedding.jpg" alt="DJ Turntable performing at a wedding">
             </figure>
-            <main class="nestedgrid1">
-                <div class="intro">
-                    <p>DJ Turntable is a full-service disc jockey and entertainment company that delivers fantastic music, great sound, and amazing lighting with spot-on professionalism. Whether you're planning a wedding, school celebration, corporate event, or private party, DJ Turntable will make music the heartbeat of your celebration. We use state-of-the-art equipment to pump out the songs that you want to hear. With a digital music library of over 50,000 songs, you'll undoubtedly be able to create the playlist you've been dreaming of. Our years of experience guarantee that you get stress-free event planning and happy, dancing guests.</p>
-                </div>
-                
-                <div class="DJ">
-                    <h3>Meet The DJ</h3>
-                    <p>Dylan jackson has a passion for music and loves sharing it with great people. Read his story and get to know DJ Turntable...</p>
-                </div>
-                <div class="services">
-                    <h3>Event Services</h3>
-                    <p>DJ Turntable has loads of experience playing for all types of audiances at all kinds of celebrations. See how much fun you can have...</p>
-                </div>
-                <div class="reviews">
-                    <h3>Rave Reviews</h3>
-                    <p><b>We're not bragging, but our clients are! Here's the beat on the street...</b>"Our students were thrilled, and even the teachers enjoyed the evening!"</p>
-
+            <main>
+                <div><p>We can provide music for your wedding ceremony as well as for your reception. Because wedding parties are composed of such a variety of ages and tastes in music, our playlists blend everything from the oldies to top 40 hits in ways that all generations will appreciate.</p>
                 </div>
             </main>
+            <section>
+                <h2>Plan your gig!</h2>
+                <p>See our <a href="resources.html"><span class="green">Event Resources</span></a> to get yout party going. Select an <a href="packages.html"><span class="green">Event Package</span></a> that's right for you</p>
+            </section>
             <footer>
                 <p>©2023. DJ Turntable, Inc. All Rights Reserved</p>
                 <p>1 Quiet Valley Lane, Sepulveda CA 91343</p>
