--- a/celebrations.html
+++ b/celebrations.html
@@ -15,8 +15,8 @@
             <!-- <a href="#"><img class="logo" src="DJ_Turntable_LOGO_3.png"></a> -->
             <!-- <a href="#"><img class="small-logo" src="DJ_Turntable_LOGO_1.png"></a> -->
             <nav>
-                <a href="index.html"><img class="small-logo" src="DJ_Turntable_LOGO_1.png"></a>
-                <a href="index.html"><img class="logo" src="DJ_Turntable_LOGO_3.png"></a>
+                <a href="index.html"><img class="small-logo" src="DJ_Turntable_LOGO_1.png" alt="DJ Turntable Logo"></a>
+                <a href="index.html"><img class="logo" src="DJ_Turntable_LOGO_3.png" alt="DJ Turntable Logo"></a>
                 <br>
                 <a href="#" class="placeholder">LO</a>
                 <!-- <input type="checkbox" id="menu-bar">
@@ -60,7 +60,7 @@
             </header>
             <figure>
                 <figcaption>It's always a blast!</figcaption><br>
-                <img src="school-dance.jpg" alt="DJ Turntable performing at a wedding">
+                <img src="school-dance.jpg" alt="DJ Turntable performing at a school dance">
             </figure>
             <main>
                 <div><p>Our specialty is turning a gym into a hoppin' dance floor packed with kids having the time of their loves. We spin for middle and high school dances and proms and all sorts of college celebrations. We know what to pland and what not to play! And, we make sure that our playlist follows your school's guidelines.</p>
