--- a/corporate.html
+++ b/corporate.html
@@ -15,8 +15,8 @@
             <!-- <a href="#"><img class="logo" src="DJ_Turntable_LOGO_3.png"></a> -->
             <!-- <a href="#"><img class="small-logo" src="DJ_Turntable_LOGO_1.png"></a> -->
             <nav>
-                <a href="index.html"><img class="small-logo" src="DJ_Turntable_LOGO_1.png"></a>
-                <a href="index.html"><img class="logo" src="DJ_Turntable_LOGO_3.png"></a>
+                <a href="index.html"><img class="small-logo" src="DJ_Turntable_LOGO_1.png" alt="DJ Turntable Logo"></a>
+                <a href="index.html"><img class="logo" src="DJ_Turntable_LOGO_3.png" alt="DJ Turntable Logo"></a>
                 <br>
                 <a href="#" class="placeholder">LO</a>
                 <!-- <input type="checkbox" id="menu-bar">
