--- a/about.html
+++ b/about.html
@@ -11,12 +11,12 @@
     </head>
     <body>
         
-        <div class="container1">
+        <div class="containerA">
             <!-- <a href="#"><img class="logo" src="DJ_Turntable_LOGO_3.png"></a> -->
             <!-- <a href="#"><img class="small-logo" src="DJ_Turntable_LOGO_1.png"></a> -->
             <nav>
-                <a href="index.html"><img class="small-logo" src="DJ_Turntable_LOGO_1.png"></a>
-                <a href="index.html"><img class="logo" src="DJ_Turntable_LOGO_3.png"></a>
+                <a href="index.html"><img class="small-logo" src="DJ_Turntable_LOGO_1.png" alt="DJ Turntable Logo"></a>
+                <a href="index.html"><img class="logo" src="DJ_Turntable_LOGO_3.png" alt="DJ Turntable Logo"></a>
                 <br>
                 <a href="#" class="placeholder">LO</a>
                 <!-- <input type="checkbox" id="menu-bar">
@@ -27,7 +27,7 @@
                   
                 <div class="navbar">
                     <ul>
-                        <li><a href="about.html" id="about" onclick="aboutClick()" class="active">about <span class="plus">+</span></a>
+                        <li><a href="about.html" id="about" onclick="aboutClick()">about <span class="plus">+</span></a>
                             <ul class = "dropdown-menu1">
                                 <li class="dropdown-item1"><a href="story.html">My Story</a></li>
                             </ul>
@@ -53,6 +53,19 @@
             <div class="spacer-area">
                 <span>placeholder</span>
             </div>
+            <header class="header-container">
+                <div>
+                <h1>It's all about you!</h1>
+                <img src="twitter-icon.png" alt="Twitter Logo">
+                <img id="facebook" src="facebook-icon.png" alt="facebook logo">
+                </div>
+            </header>
+            <main>
+                <div>
+                    <p>Our mission is to provide you and your guests with the best party experience ever. From the first time we connect, to when we say "good night" at the end of the celebration, we know what music to suggest and spin for you. every event is different because everyone has their own unique personality and taste in music. Your playlist will be a custom fit, not only for the occasion, but for you. We guarantee that your musical expectations for your celebrations will be met.</p>
+                    <span><a href="contact.html" class="green">Contact us</a> and let us know what dates you're looking for.</span>
+                </div>
+            </main>
             <footer>
                 <p>©2023. DJ Turntable, Inc. All Rights Reserved</p>
                 <p>1 Quiet Valley Lane, Sepulveda CA 91343</p>
