--- a/celebrations.html
+++ b/celebrations.html
@@ -53,7 +53,7 @@
             <div class="spacer-area">
                 <span>placeholder</span>
             </div>
-            <header>
+            <header class="header2">
                 <h1>School Celebrations</h1>
                 <img src="twitter-icon.png" alt="Twitter Logo">
                 <img id="facebook" src="facebook-icon.png" alt="facebook logo">
