--- a/about.html
+++ b/about.html
@@ -53,19 +53,27 @@
             <div class="spacer-area">
                 <span>placeholder</span>
             </div>
-            <header class="header-container">
-                <div>
-                <h1>It's all about you!</h1>
-                <img src="twitter-icon.png" alt="Twitter Logo">
-                <img id="facebook" src="facebook-icon.png" alt="facebook logo">
-                </div>
-            </header>
+            <div class="nestedgridA">
+                <header class="headerA">
+                    <div>
+                    <h1>It's all about you!</h1>
+                    <img src="twitter-icon.png" alt="Twitter Logo">
+                    <img id="facebook" src="facebook-icon.png" alt="facebook logo">
+                    </div>
+                </header>
+                <figure>
+                    <img src="about.jpg" alt="people having a conversation at a party">
+                </figure>
+            </div>
             <main>
                 <div>
                     <p>Our mission is to provide you and your guests with the best party experience ever. From the first time we connect, to when we say "good night" at the end of the celebration, we know what music to suggest and spin for you. every event is different because everyone has their own unique personality and taste in music. Your playlist will be a custom fit, not only for the occasion, but for you. We guarantee that your musical expectations for your celebrations will be met.</p>
                     <span><a href="contact.html" class="green">Contact us</a> and let us know what dates you're looking for.</span>
                 </div>
             </main>
+            <section>
+                <h2>Click here to read <span class="green">My Story</span></h2>
+            </section>
             <footer>
                 <p>©2023. DJ Turntable, Inc. All Rights Reserved</p>
                 <p>1 Quiet Valley Lane, Sepulveda CA 91343</p>
