--- a/story.html
+++ b/story.html
@@ -56,26 +56,28 @@
             <div class="nestedgridA">
                 <header class="headerA">
                     <div>
-                    <h1>It's all about you!</h1>
+                    <h1>My Story</h1>
                     <img src="twitter-icon.png" alt="Twitter Logo">
                     <img id="facebook" src="facebook-icon.png" alt="facebook logo">
                     </div>
                 </header>
                 <figure>
-                    <img src="about.jpg" alt="people having a conversation at a party">
+                    <img src="story.jpg" alt="people having a conversation at a party">
                 </figure>
             </div>
             <main>
-                <div>
-                    <p>Our mission is to provide you and your guests with the best party experience ever. From the first time we connect, to when we say "good night" at the end of the celebration, we know what music to suggest and spin for you. every event is different because everyone has their own unique personality and taste in music. Your playlist will be a custom fit, not only for the occasion, but for you. We guarantee that your musical expectations for your celebrations will be met.</p>
-                    <span><a href="contact.html" class="green">Contact us</a> and let us know what dates you're looking for.</span>
-                </div>
+                <article>
+                        <p>I grew up in a very musical family. My father played saxophone with a "band of buddies" from his college days, and he is now the local high school band teacher. My mother is the singer in the family, and she is a regular lead performer in musicals with our community theater.
+                            Needless to say, my three siblings and I all took music lessons. But even though I was the one who never could settle on a favorite instrumrnt, I'm the only one who went into the music business!
+                            Early on, music became my thing. I could name any song on the radio and tell you not only who was singing it, but who wrote it and when. At my senior prom, I was at the turntable more than I was on the dance floor.
+                            During College, I supplemented my income by DJ-ing fraternity and sorority-sponsored parties and other campus events. Eventually, I landed a job with a radio station. 
+                            That was cool, but I missed being part of all the action and fun that people were having at a party rocking with music. let's face it, being a DJ is the closest thing to being a rock star without having to play an instrument! 
+                            So, I started DJ Turntable, and I haven't stopped spinning since. I love what I do and so will you. -Dylan Jackson
+                        </p>
+                </article>
+                
             </main>
-            <section>
-                <div>
-                    <h2>Click here to read <a href="story.html" class="green">My Story</a></h2>
-                </div>
-            </section>
+            
             <footer>
                 <p>©2023. DJ Turntable, Inc. All Rights Reserved</p>
                 <p>1 Quiet Valley Lane, Sepulveda CA 91343</p>
