--- a/packages.html
+++ b/packages.html
@@ -84,7 +84,7 @@
                     <img src="platinumRecord2.png">
                     <div class="info">
                         <h2>Platinum Package</h2>
-                        <div class="package-btn">
+                        <div class="package-btn" id="platButton" onclick="packageArrow()">
                             <div class="package-btn__line"></div>
                         </div>
                     </div>
