--- a/resources.html
+++ b/resources.html
@@ -58,14 +58,16 @@
                 <img src="twitter-icon.png" alt="Twitter Logo">
                 <img id="facebook" src="facebook-icon.png" alt="facebook logo">
             </header>
-            <main>
-                <p>As you prepere for your celebration, DJ Turntable will help you in any way we can. We've been involved in planning hundreds of events over the years. So ,as the song says, "don't worry--be happy!"</p>
-                <div>
-                    <a href="#"><h2 class="green">Music Library Sample</h2></a>
+            <main class="nestedgridRES">
+                <div class="res-paragraph">
+                    <p>As you prepere for your celebration, DJ Turntable will help you in any way we can. We've been involved in planning hundreds of events over the years. So, as the song says, "don't worry--be happy!"</p>
+                </div>
+                <div class="library">
+                    <a href="https://open.spotify.com/playlist/6vDGVr652ztNWKZuHvsFvx"><h2 class="green">Music Library Sample</h2></a>
                     <span>We have access to over 50,000 songs covering a wide range of music genres.</span>
                 </div>
-                <div>
-                    <a href="#"><h2 class="green">Event Planning Form</h2></a>
+                <div class="planning-form">
+                    <a href="Event_Planning_Form.pdf"><h2 class="green">Event Planning Form</h2></a>
                     <span>With all the details to consider, the planning should be done way ahead of time.</span>
                 </div>
             </main>
