--- a/reviews.html
+++ b/reviews.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         
-        <div class="container1">
+        <div class="containerREV">
             <!-- <a href="#"><img class="logo" src="DJ_Turntable_LOGO_3.png"></a> -->
             <!-- <a href="#"><img class="small-logo" src="DJ_Turntable_LOGO_1.png"></a> -->
             <nav>
@@ -53,7 +53,38 @@
             <div class="spacer-area">
                 <span>placeholder</span>
             </div>
-            
+            <header>
+                <h1>Our clients are our best advertisement! Here's the beat on the street...</h1>
+                <img src="twitter-icon.png" alt="Twitter Logo">
+                <img id="facebook" src="facebook-icon.png" alt="facebook logo">
+            </header>
+            <main>
+                <div class="review">
+                    <p>Dylan, you were the absolute best! The music was fantastic, and the lighting effects were amazing. Your talent transformed an ordinary gym into a high-tech night club. Our students were thrilled, and even the teachers enjoyed the evening! Everyone I've talked to agrees that this was the best ever senior prom we've had in years. Thank you for sharing your talend with us.</p>
+                    <span><i>Maureen A./Principal, Madison Creek High school</i></span>
+                </div>
+                <div class="review">
+                    <p>We have never met a DJ who was so personable and easy to work with. You right - you did make it "all about us!" We were so impressed by how smoothly our parents' anniversary went, and the music and dancing were incredible. We're still amazed how you were able to get the grandkids and grandparents on the dance floor at the same time! Thank you a thousand times.</p>
+                    <span><i>Emma, Bridget, and Seth</i></span>
+                </div>
+                <div class="review">
+                    <p>We want to personally thank you for the terrific job you did at our company holiday party. The night was wonderful in large part due to you and your help with the initial event planning. You had everyone on the dance floor at some point during the night. Just when we thought we could take a break, another great song came on.</p>
+                    <span><i>Katherine J./Director of Administration, Cape Astor Investments</i></span>
+                </div>
+                <div class="review">
+                    <p>Dylan,<br>Paul and I wanted to make sure you knew how pleased we were with the job you did at our wedding. Our friends are still talking about the fun they had at the reception. Several have asked for your contact information, and we were more than happy to connect them with you. We can't wait to go to one of their weddings with you as the DJ! THank you so much!</p>
+                    <span><i>Melinda & Paul R.</i></span>
+                </div>
+                <div class="review">
+                    <p>Thank you for the fabulous work organizing out 80's dance perty. The MTV decorations and music from that decade got everyone dancing. I was amazed by the depth of your music selection . Having ther dancers with you to teach the guests the "Electric Slide" was brilliant! Your professionalism and attention to the little things were second-to-none. All I had to do was show up and have a blast Thank you!</p>
+                    <span><i>Aggie H.</i></span>
+                </div>
+                <div class="review">
+                    <p>Dear Dylan,<br>On behalf of the entire committee, I wish to thank you for your wonderful efforts in making our class reunion such a memorable evening. Your professionalism was on display from the day we first met. A great time was had by all, thanks to the amazing playlist that you put together, You gave us a great ride down memory land! Please call me for a reference anytime</p>
+                    <span><i>George H./Hopkinton High School Alumni Association</i></span>
+                </div>
+
+            </main>
             <footer>
                 <p>©2023. DJ Turntable, Inc. All Rights Reserved</p>
                 <p>1 Quiet Valley Lane, Sepulveda CA 91343</p>
